force-app/main/default/objects/Order/fields/CalculatedTotal__c.field-meta.xml
<CustomField>
    <fullName>CalculatedTotal__c</fullName>
    <label>Total Calculado</label>
    <summarizedField>OrderItem.TotalFinalPrice__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>