force-app/main/default/objects/Order/fields/CentroDistribuicao__c.field-meta.xml
<CustomField>
    <fullName>CentroDistribuicao__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Centro de distribuição responsável pelo pedido.</description>
    <label>Centro de Distribuição</label>
    <referenceTo>DistributionCenter__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>