force-app/main/default/objects/Order/fields/CondicaoPagamento__c.field-meta.xml
<CustomField>
    <fullName>CondicaoPagamento__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Condição aplicada ao pagamento do pedido.</description>
    <label>Condição de Pagamento</label>
    <referenceTo>CondicaoPagamento__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>