force-app/main/default/objects/Order/fields/DataEntrega__c.field-meta.xml
<CustomField>
    <fullName>DataEntrega__c</fullName>
    <description>Data de entrega do pedido.</description>
    <label>Data de Entrega</label>
    <required>true</required>
    <type>Date</type>
</CustomField>