force-app/main/default/objects/Order/fields/Integrated__c.field-meta.xml
<CustomField>
    <fullName>Integrated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>O pedido é originado de um sistema externo.</description>
    <label>Pedido de integração</label>
    <type>Checkbox</type>
</CustomField>