force-app/main/default/objects/Order/fields/IntegratedOut__c.field-meta.xml
<CustomField>
    <fullName>IntegratedOut__c</fullName>
    <defaultValue>false</defaultValue>
    <description>O pedido está integrado a um sistema externo</description>
    <label>Enviado para integração</label>
    <type>Checkbox</type>
</CustomField>