force-app/main/default/objects/Order/fields/IntegrationLogInbound__c.field-meta.xml
<CustomField>
    <fullName>IntegrationLogInbound__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Log de Integrações</label>
    <referenceTo>IntegrationLog__c</referenceTo>
    <relationshipLabel>Orders (Log de Integrações IN)</relationshipLabel>
    <relationshipName>OrdersInbound</relationshipName>
    <type>Lookup</type>
</CustomField>