force-app/main/default/objects/Order/fields/IntegrationLogOutbound__c.field-meta.xml
<CustomField>
    <fullName>IntegrationLogOutbound__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Log de Integrações</label>
    <referenceTo>IntegrationLog__c</referenceTo>
    <relationshipLabel>Orders (Log de Integrações Out)</relationshipLabel>
    <relationshipName>OrdersOut</relationshipName>
    <type>Lookup</type>
</CustomField>