force-app/main/default/objects/Order/fields/NumPedido__c.field-meta.xml
<CustomField>
    <fullName>NumPedido__c</fullName>
    <description>Número do pedido informado pelo representante.</description>
    <label>Número do Pedido</label>
    <length>50</length>
    <type>Text</type>
</CustomField>