force-app/main/default/objects/Order/fields/TipoFrete__c.field-meta.xml
<CustomField>
    <fullName>TipoFrete__c</fullName>
    <description>Tipo de frete para o pedido.</description>
    <label>Tipo de Frete</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CIF</fullName>
            </value>
            <value>
                <fullName>FOB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>