force-app/main/default/objects/Order/validationRules/Conta_Obrigatoria.validationRule-meta.xml
<ValidationRule>
    <fullName>Conta_Obrigatoria</fullName>
    <active>true</active>
    <description>Deve ser dada uma conta.</description>
    <errorConditionFormula>ISBLANK( AccountId )</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Selecione uma conta.</errorMessage>
</ValidationRule>