force-app/main/default/objects/Order/validationRules/Conta_X_Endereco.validationRule-meta.xml
<ValidationRule>
    <fullName>Conta_X_Endereco</fullName>
    <active>true</active>
    <description>O endereço deve pertencer à conta</description>
    <errorConditionFormula>AccountAddress__r.Account__c  &lt;&gt;  AccountId</errorConditionFormula>
    <errorDisplayField>AccountAddress__c</errorDisplayField>
    <errorMessage>Este endereço não pertence à conta selecionada.</errorMessage>
</ValidationRule>