force-app/main/default/objects/Order/listViews/InbtegratedIn.listView-meta.xml
<ListView>
    <fullName>InbtegratedIn</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>PRICEBOOK2.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IntegratedIn__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Origem externa</label>
</ListView>